2007-06-14  Sven Neumann  <sven@gimp.org>

	* libgimpthumb/Makefile.am (gimp_thumbnail_list_LDADD): fixed
	parallel builds (bug #447402).

2007-06-13  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: prepend instead of appending to list.

2007-06-13  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c (putchars): Update "cursor"
	after writing characters to a string buffer. Fixes bug #446884.

2007-06-13  Sven Neumann  <sven@gimp.org>

	* app/app.c (app_exit_after_callback): if GIMP_UNSTABLE is
	undefined before calling exit() call tile_swap_exit(), not
	base_exit().

2007-06-13  Sven Neumann  <sven@gimp.org>

	* app/base/base.c (base_exit): call tile_cache_exit() before
	tile_swap_exit(). tile_cache_exit() may use the tile swap in
	pathological cases.

	* app/base/tile-cache.c (tile_cache_exit): warn if the tile cache
	is not empty.

2007-06-13  Sven Neumann  <sven@gimp.org>

	* app/base/tile-cache.c: minor cleanup.

2007-06-13  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: small fix to the previous commit
	in how layers are skipped.

2007-06-13  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: don't load any layers from a TIFF
	directory which don't match the mode of the first image in the TIFF
	directory.

2007-06-13  Sven Neumann  <sven@gimp.org>

	* app/errors.[ch]: added errors_exit() and unset the Gimp
	reference. Errors may occur after the Gimp object has been finalized.

	* app/app.c (app_run): call errors_exit().

2007-06-12  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_image): Instead of passing any
	file to libexif blindly, check first that some JPEG APP1 marker
	contains the EXIF header.

	* plug-ins/jpeg/jpeg-exif.c (jpeg_apply_exif_data_to_image):
	removed the tests that were checking for the presence of some EXIF
	tags such as the EXIF version before deciding if the data should
	be processed or not (bug #446809).
